[gd_scene load_steps=9 format=2]

[ext_resource path="res://recursos/jogos/enchente/encerramento/CutsceneFim.gd" type="Script" id=1]
[ext_resource path="res://elementos/audio/sfx/hud-clique.mp3" type="AudioStream" id=2]
[ext_resource path="res://elementos/imagem/enchente/cutscene/fim.png" type="Texture" id=3]
[ext_resource path="res://elementos/imagem/abertura/logo.png" type="Texture" id=4]
[ext_resource path="res://elementos/UI/botao_pular_pressed.png" type="Texture" id=5]
[ext_resource path="res://elementos/UI/botao_pular_default.png" type="Texture" id=6]
[ext_resource path="res://elementos/UI/botao_pular_hover.png" type="Texture" id=7]

[sub_resource type="GDScript" id=1]
script/source = "extends AudioStreamPlayer

onready var bgm := {
	'cidade': preload(\"res://elementos/audio/bgm/cutscene/amb-cidade.mp3\"),
	'garoa': preload(\"res://elementos/audio/bgm/cutscene/amb-chuva-leve.mp3\"),
	'chuva': preload(\"res://elementos/audio/bgm/cutscene/amb-chuva-forte.mp3\"),
	'saco_dona_maria': preload(\"res://elementos/audio/bgm/cutscene/amb-saco-de-lixo.mp3\"),
}

func tocar_som(evento: String) -> void:
	if not bgm.has(evento):
		return

	stop()
	stream = bgm[evento]
	play()
"

[node name="cutsceneFim" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="DialogContainer" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 49.0
margin_top = 377.0
margin_right = -53.0
margin_bottom = 573.0

[node name="Tela" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Tela"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="Pre" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Mascara" type="ColorRect" parent="Pre"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Pos" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MascaraPos" type="ColorRect" parent="Pos"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Logo" type="TextureRect" parent="Pos/MascaraPos"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -109.5
margin_top = 193.0
margin_right = 109.5
margin_bottom = 420.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Botoes" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BotaoPular" type="TextureButton" parent="Botoes"]
anchor_left = 0.826
anchor_top = 0.054
anchor_right = 0.826
anchor_bottom = 0.054
margin_left = -112.72
margin_top = -39.12
margin_right = 112.28
margin_bottom = 39.88
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AudioStreamSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX Menu"

[node name="AudioStreamBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -3.496
bus = "BGM"
script = SubResource( 1 )

[node name="ContainerDialogo" type="Control" parent="."]
margin_right = 720.0
margin_bottom = 1280.0

[node name="TweenInicio" type="Tween" parent="."]

[connection signal="button_up" from="Botoes/BotaoPular" to="." method="_on_BotaoPular_button_up"]
